--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "lingo3d-react": "^1.2.77",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "lingo3d-react": "latest",
+    "react": "18",
+    "react-dom": "18"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
