--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "lingodeploy examples/fairy-tale"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
     "lingo3d-react": "latest",
     "react": "18",
     "react-dom": "18"
