--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "wizard-of-oz",
+  "name": "fairytale",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "lingodeploy examples/fairy-tale"
+    "deploy": "lingodeploy examples/fairytale"
   },
   "dependencies": {
     "lingo3d-react": "latest",
